--- a/includes/thesis/part02-chapter01-introduction.tex
+++ b/includes/thesis/part02-chapter01-introduction.tex
@@ -76,7 +76,7 @@ This has been done using the \texttt{SlicerRT} \cite{pinterSlicerRTRadiationTher
 
 
 \section{Structure of this Thesis}\label{s:introduction-structureofthisthesis}
-The next chapter is the background (\cref{c:background}), where the necessary theoretical background will be explained.\\
+The next chapter is the frame (\cref{c:background}), where the necessary theoretical information will be explained.\\
 In \cref{c:materialsNmethods}, the origin of the datasets and the evaluation of the segmentation will be described.\\
 Afterwards, in \cref{c:resuls}, results of the segmentations will be listed.\\
 Finally, in \cref{c:conclusion} the results of this work will be concluded,
