--- a/includes/thesis/part02-chapter04-results.tex
+++ b/includes/thesis/part02-chapter04-results.tex
@@ -2,15 +2,11 @@
 
 \chapter{Results}\label{c:resuls}
 Supervised segmentation evaluation was performed with the 3D Slicer extension \textit{SlicerRT}.
-Segmentation results of \noTesters, which did six segmentations each, has been analyzed.
+Segmentation results of \noTesters, which did six segmentations each, has been analyzed.\\
+\textit{TODO: no statistical relevance}
 These 42 segmentations were compared to the reference segmentation via the \acrlong{dc} and \acrlong{hd}.
 
-
-\begin{figure}[h] %TODO: remove
-	\centerline{
-		\includegraphics[scale=0.25]{images/dragons.jpg}}
-	\caption{Dragons}
-\end{figure}
+\textit{TODO}
 
 \section{tester 1}
 \begin{figure}[h!] % https://www.baeldung.com/cs/latex-draw-charts
@@ -28,7 +24,7 @@ These 42 segmentations were compared to the reference segmentation via the \acrl
 					axis x line = bottom,
 					xtick distance = 1,
 					symbolic x coords = {Scapula, Clavicle, Humerus},
-					legend pos = south west,
+					legend pos = south east,
 					nodes near coords,
 					enlarge x limits = 0.2,
 					every node near coord/.append style={anchor=west, rotate=90},
@@ -59,7 +55,7 @@ These 42 segmentations were compared to the reference segmentation via the \acrl
 						axis x line = bottom,
 						xtick distance = 1,
 						symbolic x coords = {Scapula, Clavicle, Humerus},
-						legend pos = north west,
+						legend pos = south east,
 						nodes near coords,
 						enlarge x limits = 0.2,
 						every node near coord/.append style={anchor=west, rotate=90},
@@ -87,7 +83,7 @@ These 42 segmentations were compared to the reference segmentation via the \acrl
 						axis x line = bottom,
 						xtick distance = 1,
 						symbolic x coords = {Scapula, Clavicle, Humerus},
-						legend pos = north west,
+						legend pos = south east,
 						nodes near coords,
 						enlarge x limits = 0.2,
 						every node near coord/.append style={anchor=west, rotate=90},
@@ -120,7 +116,7 @@ These 42 segmentations were compared to the reference segmentation via the \acrl
 					axis x line = bottom,
 					xtick distance = 1,
 					symbolic x coords = {Scapula, Clavicle, Humerus},
-					legend pos = south west,
+					legend pos = south east,
 					nodes near coords,
 					enlarge x limits = 0.2,
 					every node near coord/.append style={anchor=west, rotate=90},
@@ -336,7 +332,7 @@ These 42 segmentations were compared to the reference segmentation via the \acrl
 						axis x line = bottom,
 						xtick distance = 1,
 						symbolic x coords = {Scapula, Clavicle, Humerus},
-						legend pos = south east,
+						legend pos = north west,
 						nodes near coords,
 						enlarge x limits = 0.2,
 						every node near coord/.append style={anchor=west, rotate=90},
@@ -428,7 +424,7 @@ These 42 segmentations were compared to the reference segmentation via the \acrl
 						axis x line = bottom,
 						xtick distance = 1,
 						symbolic x coords = {Scapula, Clavicle, Humerus},
-						legend pos = south east,
+						legend pos = north center,
 						nodes near coords,
 						enlarge x limits = 0.2,
 						every node near coord/.append style={anchor=west, rotate=90},
@@ -456,7 +452,7 @@ These 42 segmentations were compared to the reference segmentation via the \acrl
 						axis x line = bottom,
 						xtick distance = 1,
 						symbolic x coords = {Scapula, Clavicle, Humerus},
-						legend pos = south east,
+						legend pos = north center,
 						nodes near coords,
 						enlarge x limits = 0.2,
 						every node near coord/.append style={anchor=west, rotate=90},
@@ -520,7 +516,7 @@ These 42 segmentations were compared to the reference segmentation via the \acrl
 						axis x line = bottom,
 						xtick distance = 1,
 						symbolic x coords = {Scapula, Clavicle, Humerus},
-						legend pos = south east,
+						legend pos = south west,
 						nodes near coords,
 						enlarge x limits = 0.2,
 						every node near coord/.append style={anchor=west, rotate=90},
@@ -548,7 +544,7 @@ These 42 segmentations were compared to the reference segmentation via the \acrl
 						axis x line = bottom,
 						xtick distance = 1,
 						symbolic x coords = {Scapula, Clavicle, Humerus},
-						legend pos = south east,
+						legend pos = south west,
 						nodes near coords,
 						enlarge x limits = 0.2,
 						every node near coord/.append style={anchor=west, rotate=90},
@@ -612,7 +608,7 @@ These 42 segmentations were compared to the reference segmentation via the \acrl
 						axis x line = bottom,
 						xtick distance = 1,
 						symbolic x coords = {Scapula, Clavicle, Humerus},
-						legend pos = south east,
+						legend pos = north east,
 						nodes near coords,
 						enlarge x limits = 0.2,
 						every node near coord/.append style={anchor=west, rotate=90},
@@ -640,7 +636,7 @@ These 42 segmentations were compared to the reference segmentation via the \acrl
 						axis x line = bottom,
 						xtick distance = 1,
 						symbolic x coords = {Scapula, Clavicle, Humerus},
-						legend pos = south east,
+						legend pos = north east,
 						nodes near coords,
 						enlarge x limits = 0.2,
 						every node near coord/.append style={anchor=west, rotate=90},
