--- a/includes/thesis/part02-chapter03-methods.tex
+++ b/includes/thesis/part02-chapter03-methods.tex
@@ -2,20 +2,20 @@
 
 \chapter{Materials and Methods}\label{c:materialsNmethods}
 
-In this section, materials and methods used in this thesis will be described.
-Furthermore, the rationale of using the specific material or method for a task will be explained.
+In this section, the various materials and methods used in this thesis will be described.
+Furthermore, the rationale of using the specific tools for a task will be explained.
 
 \section{Literature}\label{s:literature}
 To obtain a systematic overview of the topics \mct\space segmentation and guide authoring, a literature search was performed with the help of online search engines and databases like ``Google Scholar'', ``PubMed'', ``ScienceDirect'', ``IEEE Xplore'' and ``ResearchGate''.
 However, to get a comprehensive understanding of the used software ``3D Slicer'' and ``SlicerRT'' also less scientific resources had to be consulted.
 Namely, their respective documentation websites and also explanations in video form, mostly hosted on YouTube (Google LLC, San Bruno, California, USA).
 Keywords for resource search included terms like ``3DSlicer'', ``\mct'', ``segmentation'', ``segmentation evaluation'', ``software documentation''.
-To make sure the resources were up to date with current developments in image segmentation, literature older than 10 years was excluded.
+To make sure the resources were up-to-date with current developments in image segmentation, literature older than 10 years was excluded.
 An exception was made for material explaining basic concepts that have been developed several decades ago, as can be seen in \cref{c:background}.
 
 
 \section{Datasets}\label{s:datasets}
-All nine datasets used in this study, were acquired at the competence center for preclinical imaging and biomedical engineering at the University of Applied Sciences, Wiener Neustadt.
+All nine datasets used in this study were acquired at the competence center for preclinical imaging and biomedical engineering at the University of Applied Sciences, Wiener Neustadt.
 The total body scans were performed on a Molecubes X-Cube \mct\space machine (Molecubes NV X-Cube, MOLECUBES NV, Gent, Belgium).
 The specimens were non contrast enhanced mice however, remnants of contrast agent could be seen in the vesica urinaria of all scanned animals.
 All scans were acquired with a tube voltage of 50\acrshort{kv} and a tube current exposure time product of 70\acrshort{mas}.
@@ -83,10 +83,10 @@ As can be seen in \cref{fig:dataset-preparation} several steps of preparation we
 All modifications were done using built in 3D Slicer tools.
 Firstly, a rough cropping of the dataset was performed.
 The goal was to reduce the size of the dataset to only include anatomical structures relevant for the segmentation assignment.
-This first rough cropping operation already reduced the dataset geometric size to approximately one fifth of its original dimensions.
+This first rough cropping operation already reduced the dataset geometric size to approximately one fifth of its original dimensions.\\
 Next, a background masking operation has been applied with the goal of reducing file size.
 In order to achieve this, first a threshold operation was performed to segment background noise in the scan as well as anatomical structures composed of soft tissue.
-The resulting segment then, was the base for a masking operation where the segmented volume was uniformly overwritten with the HU value of -1000.
+The resulting segment was the base for a masking operation where the segmented volume was uniformly overwritten with the HU value of -1000.\\
 Thirdly, the remaining volume was cropped again, making only minor adjustments to the ROI.
 The goal was to get rid of small artifacts created by the first cropping operation.
 Finally, to aid the testers in determining if they are currently working on the left or right side anatomy of the dataset, side indicators were added to the volume.
@@ -122,7 +122,7 @@ However, the \acrshort{dc} is based on segmentation overlap and therefore has no
 \Citeauthor{rayedDeepLearningMedical2024} and \citeauthor{wangImageSegmentationEvaluation2020} recommend the employment and comparison of a second similarity metric, which calculates the surface distance of two segmentations \cite{aspertMESHMeasuringErrors2002,simBrainVentricleDetection2016}.
 As a result, the \acrfull{hd} was chosen by the author as a second metric.
 Coincidentally, both are readily available in 3D Slicer by a 3rd party extension called SlicerRT \cite{pinterSlicerRTRadiationTherapy2012}.
-Both, the \acrlong{dc} and the \acrlong{hd} are examples of supervised, epirical, indirect and objective evaluation methods (see: \cref{fig:eval}).
+Both, the \acrlong{dc} and the \acrlong{hd} are examples of supervised, empirical, indirect and objective evaluation methods (see: \cref{fig:eval}).
 Where the quality of a segmentation is determined by comparing it to a known high quality reference segmentation.
 The comparison is performed by calculating a similarity score and is thus objective but indirect.
 In contrast, a subjective evaluation would be the act of visually inspecting and subjectively assessing segmentation quality.
@@ -136,11 +136,11 @@ A nearly full skeleton segmentation of the mouse specimens in the dataset was pe
 Depending on image quality, artifacts, and resolution, on average about 102 individual bones could be segmented in a single specimen.
 The only exception being the ribs, which were segmented pair wise.
 In other words, instead of creating individual segments for costa 1 left and right, a single segment was created called costae 1.
-As indicated the individual bones were segmented and labeled using their latin names, as this is common practice in literature and research \cite{harrisonVertebralLandmarksIdentification2013,jeromeSkeletalSystem2018,ruberteMorphologicalMousePhenotyping2017,ruberteBridgingMouseHuman2023}.
+As indicated the individual bones were segmented and labeled using their Latin names, as this is common practice in literature and research \cite{harrisonVertebralLandmarksIdentification2013,jeromeSkeletalSystem2018,ruberteMorphologicalMousePhenotyping2017,ruberteBridgingMouseHuman2023}.
 Image resolution limitations were found to impair segmentation accuracy in the wrist and ankle joints and thus, the affected bones were excluded from segmentation.
 As most fully automatic segmentation tools included in 3D Slicer were found to have a high error rate when applied to the dataset in this study, they were disregarded for usage in the ground truth segmentation.
 The ground truth segmentation was performed by the author using strictly manual and semi-automatic segmentation tools included in 3D Slicer.
-Extensive usage of anatomy atlases and anatomy browsers was performed during the segmentation \cite{jeromeSkeletalSystem2018,harrisonVertebralLandmarksIdentification2013,platzerTaschenatlasAnatomieBd2013,ruberteMorphologicalMousePhenotyping2017,ruberteBridgingMouseHuman2023,rautenkranzSectionalanatomy2018}.
+Extensive usage of anatomy atlases and anatomy browsers were performed during the segmentation \cite{jeromeSkeletalSystem2018,harrisonVertebralLandmarksIdentification2013,platzerTaschenatlasAnatomieBd2013,ruberteMorphologicalMousePhenotyping2017,ruberteBridgingMouseHuman2023,rautenkranzSectionalanatomy2018}.
 To ensure consistent segmentation quality, a strict order of operations was devised.
 \Cref{fig:segmentation-workflow} provides a visual overview of the devised segmentation workflow.
 After successful completion of each task, the changes were written to a save file.
@@ -224,10 +224,22 @@ A brief summary of segmented bones can be seen in \cref{tab:bones}.
 
 
 \section{Guide composition}\label{s:guide_comp}
-\textit{TODO}
+A guide was created to be sent out to testers in conjunction with a small dataset.
+The \diatx\space framework, described in \cref{s:diataxis}, was chosen as a basis.
+Whereby, the guide was determined to be required to be a composite of the \diatx\space concepts of a
+``Reference manual'' and a ``How-to-guide''.
+This is due to the following situation.
+According to \citeauthor{procidaDiataxisDocumentationFramework2023} ``How-to-guides'' can only ever be useful to already competent users and may not allow explanations.
+However, it was assumed that the potential testers have little to no experience with segmentation of \mct\space datasets.
+Additionally, it was assumed that potential testers have little to no experience in segmentation with 3D Slicer.
+Therefore, the ``How-to-guide'' portion of the guide had to be paired with introductory information about \mct\space dataset segmentation using 3D Slicer.
+For this part \citeauthor{procidaDiataxisDocumentationFramework2023}s \diatx\space concept of a ``Reference manual'' has been chosen.
+Additionally, this has been paired with extensive use of the pictograms displayed in \cref{s:mm-pictograms}.
+The guide can be seen in \cref{a:guide}.
+
 
 \subsection{Pictograms}\label{s:mm-pictograms}
-The following black and white pictograms were drawn by the author themselves and were explained to readers of the guide in its introductory section:
+The following black and white pictograms were drawn by the author himself and were explained to readers of the guide in its introductory section:
 \newline
 \begin{figure}[h!]
 	\begin{centering}
@@ -246,7 +258,7 @@ The following black and white pictograms were drawn by the author themselves and
 			\caption{3D symbol}\label{fig:3d_icon}
 		\end{subfigure}
 	\end{centering}
-	\caption{\Cref{fig:2d_icon} and \cref{fig:3d_icon} indicate weather a tool may be used in 2D or 3D mode or view.}
+	\caption{\Cref{fig:2d_icon} and \cref{fig:3d_icon} indicate whether a tool may be used in 2D or 3D mode or view.}
 \end{figure}
 
 \begin{figure}[h!]
@@ -293,20 +305,20 @@ The following black and white pictograms were drawn by the author themselves and
 3D Slicer displays the loaded dataset in 2D slice views by default.
 The user has the option to visualize the dataset in 3D via 3D Slicer's volume rendering capabilities.
 Considerably more useful, however, is the option to display already segmented parts of the dataset in 3D view.
-Most segmentation tools in 3D Slicer are only usable in 2D views, and were therefore marked in the guide as such with \cref{fig:2d_icon}.
-A smaller part of 3D Slicers segmentation tools can be used in 3D view and were therefore marked in the guide as such with \cref{fig:3d_icon}.
+Most segmentation tools in 3D Slicer are only usable in 2D views and were therefore marked in the guide as such with \cref{fig:2d_icon}.
+A smaller part of 3D Slicer segmentation tools can be used in 3D view and were therefore marked in the guide as such with \cref{fig:3d_icon}.
 The 3D symbol, which when compared to the 2D symbol, is displayed with a \acrfull{dof} effect, giving it a 3-dimensional appearance.
 This is intended to draw the reader's attention to 3D Slicers 3D rendering view.
 In order to draw the readers' attention to a specific recommendation on how to use a tool, \cref{fig:hint_icon} was utilized.
 The hint symbol can be described as a simple glowing lightbulb, intended to suggest to readers that it symbolizes an idea to consider.
 It was always inserted into the guide with a small section of text explaining to the user how to ideally utilize the current tool.
-3D Slicer allows for many operations to be undone, some operations however cannot be undone.
+3D Slicer allows for many operations to be undone, some operations, however, cannot be undone.
 In most cases, this is because the original data has been overwritten by the user's last operation.
 Unfortunately, 3D Slicer does not explicitly inform the user which operations potentially overwrite source data and are therefore impossible to undo.
 In the guide, \cref{fig:noundo_icon} was used to inform the reader about such issues.
 This irreversible symbol displays a counterclockwise circular arrow that is disrupted by a thunderbolt, which extends from the top right to the bottom left of the symbol.
 The counterclockwise circular arrow is intended to convey to the reader the idea of undoing something by ``turning back time'' and the thunderbolt interrupts or blocks this action and thus give the reader the idea that something cannot be undone.
-A similar problem occurs, when using segmentation tools that are computationally expensive.
+A similar problem occurs when using segmentation tools that are computationally expensive.
 These are tools which may work fine for most users on small datasets and lead the user to believe they will work to the same extent on larger datasets.
 However, loading and segmenting large datasets with some tools, especially semi-automatic segmentation tools, will lead to crashes due to 3D Slicer running out of \acrfull{ram}.
 Thus, segmentation tools which may be computationally expensive were marked with \cref{fig:performance_icon} paired with a short explanation in the guide.
@@ -326,7 +338,7 @@ with the help of the guide, segment the right shoulder joint.
 The testers then saved their work in a \acrfull{mrb} file and sent it back to the author.
 Segmentation analysis was performed by loading the segmented dataset of a tester and the reference segmentation dataset into 3D Slicer.
 And computing both \acrlong{dc} and \acrlong{hd} via the 3D Slicer extension \textit{SlicerRT}.
-All this was performed an custom built computer from 2019,
+All this was performed on a custom built computer from 2019,
 which was running Linux, for more information see: \cref{t:computer-specs}.
 Analysis results were stored in \acrfull{csv} files for further processing.
 
